--- a/src/main/resources/templates/sbu/web/datagrid.html
+++ b/src/main/resources/templates/sbu/web/datagrid.html
@@ -34,7 +34,7 @@
   <!-- Filter Options Begin -->
   <div class="offcanvas offcanvas-end"
     th:attr="style=${queryConfig.fields.size > 6} ? 'width: 90%;' : null" tabindex="-1"
-    tabindex="-1" id="filterOption">
+    id="filterOption">
     <div class="offcanvas-header">
       <h4>[[${#messages.msgOrNull('sbu.web.datatable.filter_option.title') ?: 'Filter Option'}]]
       </h4>
