--- a/src/main/resources/templates/sbu/web/model.html
+++ b/src/main/resources/templates/sbu/web/model.html
@@ -6,7 +6,7 @@
   <div class="modal fade" th:id="${@webModelAttributes.MODEL_TARGET_ID_VALUE}"
     data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-lg-down">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title"></h5>
