--- a/src/main/resources/templates/sbu/fsm/state-form-editor.html
+++ b/src/main/resources/templates/sbu/fsm/state-form-editor.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5"
-  th:with="navTabs=${navTabs}, tabContent=${tabContents}, user=${__${'@' + @webModelAttributes.USER_NAME}__}, fid=${(T(java.lang.Math).random() * 2147483647).intValue()}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}">
+  th:with="_historyBack=${_historyBack} ?: false, navTabs=${navTabs}, tabContent=${tabContents}, user=${__${'@' + @webModelAttributes.USER_NAME}__}, fid=${(T(java.lang.Math).random() * 2147483647).intValue()}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}">
   <ul class="nav nav-tabs" role="tablist">
     <th:block th:each="navTab : ${navTabs}">
       <li th:replace="${navTab}"></li>
@@ -46,7 +46,7 @@
       <th:block th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
         <div th:id="${'embedded' + rid}" class="pt-2">
           <a hx:target="${'#embedded' + rid}"
-            hx:get="@{${item.joinPath('forms', formType)}(_ajaxTargetId=${'embedded' + rid}, _backTargetId=${ajaxTargetId})}"
+            hx:get="@{${item.joinPath('forms', formType)}(_historyBack=${_historyBack}, _ajaxTargetId=${'embedded' + rid}, _backTargetId=${ajaxTargetId})}"
             hx-ext="json-enc" hx-trigger="load"></a>
         </div>
       </th:block>
@@ -60,7 +60,7 @@
         <th:block th:each="formBranchData : ${formTypeData.value}">
           <a class="list-group-item" data-bs-toggle="modal" data-bs-target="#stateFormModal"
             hx-target="#modelForm"
-            hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${'embedded' + rid}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${ajaxTargetId})}"
+            hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}(_historyBack=${_historyBack}, __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${'embedded' + rid}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${ajaxTargetId})}"
             hx-ext="json-enc">
             [[${formBranchData.key}]]
           </a>
