--- a/src/main/resources/templates/sbu/jsf/show-only.html
+++ b/src/main/resources/templates/sbu/jsf/show-only.html
@@ -1,14 +1,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5"
-  th:with="jsfTheme=${jsfTheme}, item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
+  th:with="attachmentDialog=${attachmentDialog} ?: false, jsfTheme=${jsfTheme}, item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
   class="card">
+  <div th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+    class="card-header">
+    <div class="d-flex">
+      <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
+        hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
+        data-bs-toggle="modal"
+        th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
+        class="pe-2 text-success hint--left">
+        <i class="fas fa-paperclip"></i>
+      </a>
+    </div>
+  </div>
   <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
     <react-form th:id="${'showForm' + rid}" disabled="true" th:attr="theme=${jsfTheme}">
       <div></div>
     </react-form>
 
-    <div th:if="${@sbuHtml.isAttachmentSnapshotProvider(item)}" th:id="${'attachments' + rid}">
+    <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+      th:id="${'attachments' + rid}">
       <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
         hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load" class="d-none"></a>
     </div>
