--- a/src/main/resources/templates/sbu/message-boards/notices.html
+++ b/src/main/resources/templates/sbu/message-boards/notices.html
@@ -2,29 +2,29 @@
 
 <div th:fragment="bs5" th:with="notices=${notices}">
   <div class="accordion">
-    <div th:each="notice, idx : ${notices}" class="accordion-item">
+    <div th:each="notice, iter : ${notices}" class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-          th:attr="data-bs-target=${'#collapse_' + idx.index}">
+          th:attr="data-bs-target=${'#collapse_' + iter.index}">
           [[${notice.title + ' - ' + @sbuHtml.toTimeAgo(notice.createdAt)}]]
           <span class="hint--right" th:attr="aria-label=#{'ui.pinned'}">
             <i th:if="${notice.pinned}" class="fas fa-map-pin fa-fw text-danger"></i>
           </span>
         </button>
       </h2>
-      <div th:id="${'collapse_' + idx.index}" class="accordion-collapse collapse"
+      <div th:id="${'collapse_' + iter.index}" class="accordion-collapse collapse"
         th:classappend="${notice.timely} ? 'show' : ''">
         <div class="accordion-body">
-          <textarea th:id="${'markdown_' + idx.index}"
+          <textarea th:id="${'markdown_' + iter.index}"
             style="display: none;">[[${notice.content}]]</textarea>
-          <div th:id="${'markdown_viewer_' + idx.index}"></div>
+          <div th:id="${'markdown_viewer_' + iter.index}"></div>
 
           <script th:inline="javascript" defer>
-            document.getElementById(/*[[${'markdown_viewer_' + idx.index}]]*/null)._editorInstance = new toastui.Editor.factory({
-              el: document.getElementById(/*[[${'markdown_viewer_' + idx.index}]]*/null),
+            document.getElementById(/*[[${'markdown_viewer_' + iter.index}]]*/null)._editorInstance = new toastui.Editor.factory({
+              el: document.getElementById(/*[[${'markdown_viewer_' + iter.index}]]*/null),
               height: '400px',
               viewer: true,
-              initialValue: document.getElementById(/*[[${'markdown_' + idx.index}]]*/null).value
+              initialValue: document.getElementById(/*[[${'markdown_' + iter.index}]]*/null).value
             });
           </script>
         </div>
